# colcon_ws

./: .gitignore  README.md  automation.sh  environment_configuration.txt  iros_test_auto.sh  test.sh  ur10_double.urdf  weedspray_minimal.sh
src/benchbot_xarm6_cpp/: CMakeLists.txt  package.xml
src/benchbot_xarm6_cpp/include/benchbot_xarm6_cpp/: environment_info.hpp  image_subscribe.hpp  nbv.hpp  planar_robot.hpp  pointcloud_publisher.hpp  unique_point_cloud.hpp  xarm6_moveit.hpp
src/benchbot_xarm6_cpp/launch/: upside_down_xarm6.launch.py  upside_down_xarm6_moveit.launch.py
src/benchbot_xarm6_cpp/pcd/: .gitignore
src/benchbot_xarm6_cpp/setpoints/: setpoints2_rot.csv
src/benchbot_xarm6_cpp/src/: benchbot_xarm6_cpp.cpp  csv_parser.cpp  environment_info.cpp  image_subscribe.cpp  nbv.cpp  planar_robot.cpp  unique_point_cloud.cpp  xarm6_moveit.cpp
src/benchbot_xarm6_description/: CMakeLists.txt  package.xml
src/benchbot_xarm6_description/urdf/: upside_down_xarm6.urdf.xacro
src/benchbot_xarm6_stereo/: CMakeLists.txt  package.xml
src/benchbot_xarm6_stereo/include/benchbot_xarm6_stereo/: csv_parser.hpp  environment_info.hpp  image_subscribe.hpp  planar_robot.hpp  unique_point_cloud.hpp  xarm6_moveit.hpp
src/benchbot_xarm6_stereo/launch/: upside_down_xarm6_moveit.launch.py
src/benchbot_xarm6_stereo/src/: benchbot_xarm6_stereo.cpp  csv_parser.cpp  environment_info.cpp  image_subscribe.cpp  planar_robot.cpp  unique_point_cloud.cpp  xarm6_moveit.cpp
src/custom_msg/: CMakeLists.txt  package.xml
src/custom_msg/action/: PcdNBV.action
src/pointr_predict/: package.xml  setup.cfg  setup.py
src/pointr_predict/pointr_predict/: pointr_predict.py
src/pointr_predict/pointr_predict/next_best_view_gen/: nbv_gen.py  nbv_gen_parallel.py
src/pointr_predict/pointr_predict/pointr_minimal/datasets/: Completion3DDataset.py  PCNDataset.py  Projected_ShapeNet.py  __init__.py  build.py
src/pointr_predict/pointr_predict/pointr_minimal/extensions/gridding_loss/gridding_distance.egg-info/: PKG-INFO
src/pointr_predict/pointr_predict/pointr_minimal/models/: AdaPoinTr.py  FoldingNet.py  GRNet.py  PCN.py  PoinTr.py  SnowFlakeNet.py  TopNet.py  Transformer.py  Transformer_utils.py  __init__.py  build.py
src/pointr_predict/pointr_predict/pointr_minimal/tools/: builder.py
src/pointr_predict/pointr_predict/pointr_minimal/utils/: registry.py
src/tomato_xarm6/: CMakeLists.txt  package.xml
src/tomato_xarm6/include/tomato_xarm6/: csv_parser.hpp  environment_info.hpp  image_subscribe.hpp  planar_robot.hpp  unique_point_cloud.hpp  xarm6_moveit.hpp
src/tomato_xarm6/launch/: upside_down_xarm6_moveit.launch.py
src/tomato_xarm6/setpoints/: setpoints2_xyz.csv  sphere2cart.py
src/tomato_xarm6/src/: csv_parser.cpp  environment_info.cpp  image_subscribe.cpp  planar_robot.cpp  tomato_xarm6.cpp  unique_point_cloud.cpp  xarm6_moveit.cpp
src/ur10_double_moveit/: CMakeLists.txt  package.xml
src/ur10_double_moveit/include/ur10_double_moveit/: csv_parser.hpp  image_subscribe.hpp  ur10.hpp  ur10_moveit.hpp
src/ur10_double_moveit/setpoints/: setpoints1_rot.csv  setpoints1_xyz.csv
src/ur10_double_moveit/src/: csv_parser.cpp  image_subscribe.cpp  ur10.cpp  ur10_double_moveit.cpp  ur10_moveit.cpp
src/ur10_double_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/ur10_double_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit.rviz  moveit_controllers.yaml  ros2_controllers.yaml  ur10_double.ros2_control.xacro  ur10_double.srdf  ur10_double.urdf.xacro
src/ur10_double_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
src/ur10_tut_description/: package.xml  setup.cfg  setup.py
src/ur10_tut_description/urdf/: ur10.urdf.xacro  ur10_controlled.urdf.xacro  ur10_double.urdf.xacro  ur10_double_macro.xacro  ur10_macro.xacro
src/ur10_tut_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/ur10_tut_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  ros2_controllers.yaml  ur10.ros2_control.xacro  ur10.srdf  ur10.urdf.xacro
src/ur10_tut_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
