<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>benchbot_xarm6_cpp</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="xing2204@todo.todo">xing2204</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>moveit_ros_planning_interface</depend>
  <depend>rclcpp</depend>
  <depend>cv_bridge</depend>
  <depend>OpenCV</depend>
  <depend>message_filters</depend>
  <depend>Open3D</depend>
  <depend>sensor_msgs</depend>
  <depend>action_msgs</depend>
  <depend>custom_msg</depend>

  <depend>trac_ik_kinematics_plugin</depend>

  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
