<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ur10_double_moveit</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="xing2204@todo.todo">xing2204</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>moveit_ros_planning_interface</depend>
  <depend>rclcpp</depend>
  <depend>cv_bridge</depend>
  <depend>OpenCV</depend>
  <depend>sensor_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
